fix phone open on firefox

--- a/src/App.css
+++ b/src/App.css
@@ -100,3 +100,15 @@ a {
     transform: translateZ(-1000px);
   }
 }
+
+.app__open-phone {
+
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  /* z-Index: -10; */
+  -ms-perspective: -3000px;
+  perspective: -3000px;
+  cursor: pointer;
+  /* transform: translateZ(-550px) */
+}
